# logistics-video-compliance

./: .gitignore  README.md  check_videos.py  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/data/: DOT_HMR_49CFR_Part172.html  DOT_HMR_49CFR_Part173.html  OSHA_29CFR_1910_GeneralIndustry.html  OSHA_29CFR_1915_Shipyard.html  OSHA_29CFR_1917_MarineTerminals.html  OSHA_29CFR_1918_Longshoring.html  WTO_Customs_Valuation_Agreement.html  WTO_Rules_of_Origin_Agreement.html  WTO_Trade_Facilitation_Agreement.html
backend/scripts/: index_documents.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/services/: compliance_auditor.py  frame_sampler.py  rag_retriever.py  video_index.py  vision_analysis.py
backend/tests/: test_video_indexer.py
